--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "openai_assistant",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Node.js SDK for managing OpenAI assistants, threads, messages, and runs.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "openai-assistant",
+    "openai",
+    "assistants-api",
+    "openai-api"
+  ],
+  "author": "Rahees Ahmed",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.4",
